--- a/sources/5.6.0/manifest.plist
+++ b/sources/5.6.0/manifest.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://anonfiles.com/f2R7j8ify5/CoinTiger_ipa</string>
+					<string>https://github.com/JeryHuo/AppDownload/blob/main/sources/5.6.0/CoinTiger.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://jeryhuo.coding.net/p/iosdevloper/d/CoinTiger/git/raw/master/Icon.png</string>
+					<string>https://github.com/JeryHuo/AppDownload/blob/main/Icon.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://jeryhuo.coding.net/p/iosdevloper/d/CoinTiger/git/raw/master/iTunesArtwork.png</string>
+					<string>https://github.com/JeryHuo/AppDownload/blob/main/iTunesArtwork.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
